--- a/Codedex/lorem_ipsum.html/index.html
+++ b/Codedex/lorem_ipsum.html/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="styles.css" rel="stylesheet" />
+  <title>Cap That</title>
 </head>
 <body>
-  <h1></h1>
-  <a href="#heading-x">titre 1</a>
-  <a href="#heading-x">titre 2</a>
-  <div class="section">
-    <h2>la belle vie</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In fugit veniam repudiandae quidem, soluta neque. Aut, natus, laboriosam explicabo possimus similique eveniet, autem aspernatur ex nobis sequi iste odio dicta!</p>
+  <h1>Welcome to the Meme Machine</h1>
+  <button id="generator-button">Generate Meme</button>
+  <div id="meme-wrapper">
+    <img width="600" id="random-meme" src="" />
+    <h2 id="random-caption"></h2>
   </div>
-  <div class="section">
-    <h2>douce vie</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima animi laudantium eum distinctio dolorum, minus sunt dignissimos consectetur, quasi perferendis ea omnis neque quod, temporibus provident tempore earum? Magnam, suscipit?</p>
-  </div>
+  <script src="script.js"></script>
 </body>
 </html>
